--- a/person.html
+++ b/person.html
@@ -536,40 +536,14 @@
                                                 <span class="small-chip green">Sales</span>
                                             </div>
                                         </div>
-                                        <div class="left active" id="left-second">
-                                            <div class="small-boxes-container" style="align-items: center;">
-                                                <div class="small-box red-background"
-                                                    style="height: 50px; width: 120px; gap: 1rem;">
-                                                    <span class="round-img-container"
-                                                        style="height: 33px; width: 33px;">
-                                                        <img src="./up/imgs/passport.webp" alt="person-img">
-                                                    </span>
-                                                    <span>אלנה סגל</span>
-                                                </div>
-                                                <div class="small-box" style="height: 50px; width: 120px; gap: 1rem;">
-                                                    <span class="round-img-container"
-                                                        style="height: 33px; width: 33px;">
-                                                        <img src="./up/imgs/person-2.jpg" alt="person-img">
-                                                    </span>
-                                                    <span>רונה ראובני</span>
-                                                </div>
-                                                <div class="small-box" style="height: 50px; width: 120px; gap: 1rem;">
-                                                    <span class="round-img-container"
-                                                        style="height: 33px; width: 33px;">
-                                                        <img src="./up/imgs/person-3.jpg" alt="person-img">
-                                                    </span>
-                                                    <span>אלון כהן</span>
-                                                </div>
-                                            </div>
-                                        </div>
+
                                         <div class="right">
-                                            <span class="material-symbols-outlined open-in-new btn-default">
+                                            <span class="material-symbols-outlined btn-default">
                                                 web_asset
                                             </span>
                                             <div class="icon-container not-in-table">
                                                 <span class="material-symbols-outlined bigger-icon">mail</span>
-                                                <span class="material-symbols-outlined smaller-icon green"
-                                                    id="new-mail-btn">add</span>
+                                                <span class="material-symbols-outlined smaller-icon green">add</span>
                                             </div>
                                             <span class="material-symbols-outlined btn-default">
                                                 more_vert
@@ -580,73 +554,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="new-mail-container active" id="new-mail-card">
-                                    <div class="card-header mail-header">
-                                        <div class="top">
-                                            <div class="left">
-                                                <div class="title">
-                                                    <span class="material-symbols-outlined title-big-icon">
-                                                        mail
-                                                    </span>
-                                                    <span class="title-name">
-                                                        אימייל
-                                                    </span>
-                                                </div>
-                                                <div class="flex-container title-right">
-                                                    <div class="tag red">
-                                                        <span class="material-symbols-outlined">
-                                                            draft
-                                                        </span>
-                                                        <span>טיוטה</span>
-                                                    </div>
-                                                    <div class="tag dark-blue">
-                                                        <span class=" material-symbols-outlined">
-                                                            send
-                                                        </span>
-                                                        <span>שלח</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="right">
-                                                <span class="material-symbols-outlined btn-default"
-                                                    style="color: #219653; cursor: pointer;">
-                                                    check_circle
-                                                </span>
-                                                <span class="material-symbols-outlined btn-default">
-                                                    more_vert
-                                                </span>
-                                                <span class="material-symbols-outlined btn-default"
-                                                    id="close-new-mail-card">
-                                                    close
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
 
-                                    <div class="card__boxes--box__content">
-                                        <div class="card__boxes--box__content--fields">
-                                            <span class="edit-content big">
-                                                <span class="edit-field">
-                                                    <input type="text" placeholder="הקלד נמען" id="type-company">
-                                                </span>
-                                            </span>
-                                            <span class="edit-content small">
-                                                <span class="edit-field">
-                                                    <span class="value-text">אל</span>
-                                                    <span class="material-symbols-outlined">
-                                                        expand_more
-                                                    </span>
-                                                </span>
-                                            </span>
-                                            <span class="material-symbols-outlined add-circle">
-                                                add_circle
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <textarea class="textarea-title" placeholder="נושא" value=""></textarea>
-                                    <textarea class="textarea-content"></textarea>
-
-                                </div>
                                 <div class="card__boxes new-class">
                                     <!-- תקשורת -->
                                     <div class="card__boxes--box box-reduced">
@@ -757,6 +665,17 @@
                                     </div>
                                 </div>
 
+                                <div class="small-boxes-container-second">
+                                    <div class="small-box-second pop-in">
+                                        <span class="material-symbols-outlined">
+                                            home
+                                        </span>
+                                        <span>כתובות</span>
+                                        <span class="material-symbols-outlined btn-default dynamic-btns">
+                                            more_vert
+                                        </span>
+                                    </div>
+                                </div>
                                 <div class="card__boxes full-boxes">
                                     <!-- קשרים -->
                                     <div class="card__boxes--box full-box" data-target="box1">
