--- a/person.html
+++ b/person.html
@@ -505,7 +505,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="card__boxes--box__content zero-extend" id="zero-extend-communications">
+                        <div class="card__boxes--box__content zero-extend new-class-bg" id="zero-extend-communications">
                             <!-- <div class="card__boxes--box__content--fields">
                                 <span>פיגמה, מעסיק</span>
                                 <span class="material-symbols-outlined stop-icon"> stop </span>
@@ -524,12 +524,14 @@
                                 </div>
                                 <div class="card-header long-header">
                                     <div class="top">
-                                        <div class="left" id="left">
+                                        <div class="left">
                                             <div class="title">
                                                 <span class="round-img-container">
-                                                    <img src="./up/imgs/person-3.jpg" alt="person-img">
+                                                    <img src="./up/imgs/person.webp" alt="">
                                                 </span>
-                                                <span>אייל כהן</span>
+                                                <span>
+                                                    <input class="edit-name" type="text" placeholder="הקלד שם...">
+                                                </span>
                                             </div>
                                             <div class="title-right">
                                                 <span class="small-chip red">Manager</span>
@@ -591,11 +593,30 @@
                                         </div>
                                         <div class="card__boxes--box__content zero-extend">
                                             <div class="card__boxes--box__content--fields">
-                                                <span>053-3442813, עבודה</span>
-                                                <span class="material-symbols-outlined stop-icon"> stop </span>
-                                                <span>
-                                                    053-3442813, פרטי
+                                                <span class="edit-content">
+                                                    <span class="label">
+                                                        <span>עבודה</span>
+                                                    </span>
+                                                    <span class="edit-field">
+                                                        <span>053-3442813</span>
+                                                        <span class="material-symbols-outlined">
+                                                            expand_more
+                                                        </span>
+                                                    </span>
                                                 </span>
+                                                <span class="material-symbols-outlined stop-icon"> stop </span>
+                                                <span class="edit-content">
+                                                    <span class="label">
+                                                        <span>פרטי</span>
+                                                    </span>
+                                                    <span class="edit-field">
+                                                        <span>053-3442813</span>
+                                                        <span class="material-symbols-outlined">
+                                                            expand_more
+                                                        </span>
+                                                    </span>
+                                                </span>
+
                                             </div>
                                         </div>
                                         <div class="card__boxes--box__content active first-extend">
