--- a/person.html
+++ b/person.html
@@ -530,7 +530,8 @@
                                                     <img src="./up/imgs/person.webp" alt="">
                                                 </span>
                                                 <span>
-                                                    <input class="edit-name" type="text" placeholder="הקלד שם...">
+                                                    <input class="edit-name" type="text" placeholder="הקלד שם..."
+                                                        value="אייל כהן">
                                                 </span>
                                             </div>
                                             <div class="title-right">
@@ -598,7 +599,7 @@
                                                         <span>עבודה</span>
                                                     </span>
                                                     <span class="edit-field">
-                                                        <span>053-3442813</span>
+                                                        <span>הקלד...</span>
                                                         <span class="material-symbols-outlined">
                                                             expand_more
                                                         </span>
@@ -610,7 +611,7 @@
                                                         <span>פרטי</span>
                                                     </span>
                                                     <span class="edit-field">
-                                                        <span>053-3442813</span>
+                                                        <span>הקלד...</span>
                                                         <span class="material-symbols-outlined">
                                                             expand_more
                                                         </span>
