--- a/person.html
+++ b/person.html
@@ -596,10 +596,21 @@
                                             <div class="card__boxes--box__content--fields">
                                                 <span class="edit-content">
                                                     <span class="label">
-                                                        <span>עבודה</span>
+                                                        <span>טלפון</span>
                                                     </span>
                                                     <span class="edit-field">
                                                         <span>הקלד...</span>
+                                                        <span class="material-symbols-outlined">
+                                                            expand_more
+                                                        </span>
+                                                    </span>
+                                                </span>
+                                                <span class="edit-content">
+                                                    <span class="label">
+                                                        <span>סיווג</span>
+                                                    </span>
+                                                    <span class="edit-field">
+                                                        <span>פרטי</span>
                                                         <span class="material-symbols-outlined">
                                                             expand_more
                                                         </span>
@@ -608,7 +619,7 @@
                                                 <span class="material-symbols-outlined stop-icon"> stop </span>
                                                 <span class="edit-content">
                                                     <span class="label">
-                                                        <span>פרטי</span>
+                                                        <span>טלפון</span>
                                                     </span>
                                                     <span class="edit-field">
                                                         <span>הקלד...</span>
@@ -617,7 +628,17 @@
                                                         </span>
                                                     </span>
                                                 </span>
-
+                                                <span class="edit-content">
+                                                    <span class="label">
+                                                        <span>סיווג</span>
+                                                    </span>
+                                                    <span class="edit-field">
+                                                        <span>עבודה</span>
+                                                        <span class="material-symbols-outlined">
+                                                            expand_more
+                                                        </span>
+                                                    </span>
+                                                </span>
                                             </div>
                                         </div>
                                         <div class="card__boxes--box__content active first-extend">
@@ -693,6 +714,15 @@
                                             home
                                         </span>
                                         <span>כתובות</span>
+                                        <span class="material-symbols-outlined btn-default dynamic-btns">
+                                            more_vert
+                                        </span>
+                                    </div>
+                                    <div class="small-box-second pop-in">
+                                        <span class="material-symbols-outlined">
+                                            info
+                                        </span>
+                                        <span>מידע נוסף</span>
                                         <span class="material-symbols-outlined btn-default dynamic-btns">
                                             more_vert
                                         </span>
