--- a/person.html
+++ b/person.html
@@ -606,9 +606,6 @@
                                                     </span>
                                                 </span>
                                                 <span class="edit-content">
-                                                    <span class="label">
-                                                        <span>סיווג</span>
-                                                    </span>
                                                     <span class="edit-field">
                                                         <span>פרטי</span>
                                                         <span class="material-symbols-outlined">
@@ -619,7 +616,7 @@
                                                 <span class="material-symbols-outlined stop-icon"> stop </span>
                                                 <span class="edit-content">
                                                     <span class="label">
-                                                        <span>טלפון</span>
+                                                        <span>מייל</span>
                                                     </span>
                                                     <span class="edit-field">
                                                         <span>הקלד...</span>
@@ -629,9 +626,6 @@
                                                     </span>
                                                 </span>
                                                 <span class="edit-content">
-                                                    <span class="label">
-                                                        <span>סיווג</span>
-                                                    </span>
                                                     <span class="edit-field">
                                                         <span>עבודה</span>
                                                         <span class="material-symbols-outlined">
