--- a/person.html
+++ b/person.html
@@ -535,8 +535,17 @@
                                                 </span>
                                             </div>
                                             <div class="title-right">
-                                                <span class="small-chip red">Manager</span>
-                                                <span class="small-chip green">Sales</span>
+                                                <div class="tags">
+                                                    <div class="small-chip neutral">
+                                                        <span class="material-symbols-outlined btn-default"> add </span>
+                                                        <span>תגית</span>
+                                                    </div>
+                                                    <div>
+                                                        <span class="material-symbols-outlined btn-default">
+                                                            more_vert
+                                                        </span>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
 
